@@ -1,3 +1,7 @@
+2012-10-08  Asterisk Development Team <asteriskteam@digium.com>
+
+	* Asterisk 10.9.0 Released.
+
 2012-10-05  Asterisk Development Team <asteriskteam@digium.com>
 
 	* Asterisk 10.9.0-rc3 Released.
